Fix image overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,11 @@ body {
     justify-content: center!important;
 }
 
+.image-style {
+    width: 100%;
+    border-radius: 5px;
+}
+
 .about-summary-1st-grid {
     font-size: 70%;
 }
